Replaced new Java features to be compatible with JDK 1.8